deploy: 82bc58e52fc1fd30b2617afbdce066e935afae38

--- a/index-all.html
+++ b/index-all.html
@@ -1229,6 +1229,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">A unique key for this variation</div>
 </dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.StackContext.html#getMemoizedResults()" class="member-name-link">getMemoizedResults()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.StackContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">EvaluationContext.StackContext</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/Experiment.html#getMeta()" class="member-name-link">getMeta()</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Experiment.html" title="class in growthbook.sdk.java.model">Experiment</a></dt>
 <dd>
 <div class="block">Meta info about the variations</div>
@@ -1463,6 +1465,10 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#getStickyBucketIdentifierAttributes()" class="member-name-link">getStickyBucketIdentifierAttributes()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
 <dd>
 <div class="block">List of user's attributes keys.</div>
+</dd>
+<dt><a href="growthbook/sdk/java/model/GBContext.html#getStickyBucketIdentifierAttributesSignature()" class="member-name-link">getStickyBucketIdentifierAttributesSignature()</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
+<dd>
+<div class="block">Fingerprint of the feature payload used to derive sticky bucket identifiers.</div>
 </dd>
 <dt><a href="growthbook/sdk/java/model/GBContext.html#getStickyBucketService()" class="member-name-link">getStickyBucketService()</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
 <dd>
@@ -1908,6 +1914,8 @@ loadScripts(document, 'script');</script>
 </dl>
 <h2 class="title" id="I:M">M</h2>
 <dl class="index">
+<dt><a href="growthbook/sdk/java/model/GBContext.html#main(java.lang.String%5B%5D)" class="member-name-link">main(String[])</a> - Static method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/util/MathUtils.html" class="type-name-link" title="class in growthbook.sdk.java.util">MathUtils</a> - Class in <a href="growthbook/sdk/java/util/package-summary.html">growthbook.sdk.java.util</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/util/MathUtils.html#%3Cinit%3E()" class="member-name-link">MathUtils()</a> - Constructor for class growthbook.sdk.java.util.<a href="growthbook/sdk/java/util/MathUtils.html" title="class in growthbook.sdk.java.util">MathUtils</a></dt>
@@ -2566,6 +2574,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">A unique key for this variation</div>
 </dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.StackContext.html#setMemoizedResults(java.util.Map)" class="member-name-link">setMemoizedResults(Map&lt;String, FeatureResult&lt;?&gt;&gt;)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.StackContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">EvaluationContext.StackContext</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/Experiment.html#setMeta(java.util.ArrayList)" class="member-name-link">setMeta(ArrayList&lt;VariationMeta&gt;)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Experiment.html" title="class in growthbook.sdk.java.model">Experiment</a></dt>
 <dd>
 <div class="block">Meta info about the variations</div>
@@ -2705,12 +2715,14 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#setStickyBucketAssignmentDocs(java.util.Map)" class="member-name-link">setStickyBucketAssignmentDocs(Map&lt;String, StickyAssignmentsDocument&gt;)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/GBContext.html#setStickyBucketIdentifierAttributes(java.util.List)" class="member-name-link">setStickyBucketIdentifierAttributes(List&lt;String&gt;)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
-<dd>
-<div class="block">List of user's attributes keys</div>
-</dd>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#setStickyBucketIdentifierAttributes(java.util.List)" class="member-name-link">setStickyBucketIdentifierAttributes(List&lt;String&gt;)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
 <dd>
 <div class="block">List of user's attributes keys.</div>
+</dd>
+<dt><a href="growthbook/sdk/java/model/GBContext.html#setStickyBucketIdentifierAttributesSignature(java.lang.String)" class="member-name-link">setStickyBucketIdentifierAttributesSignature(String)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
+<dd>
+<div class="block">Fingerprint of the feature payload used to derive sticky bucket identifiers.</div>
 </dd>
 <dt><a href="growthbook/sdk/java/model/GBContext.html#setStickyBucketService(growthbook.sdk.java.stickyBucketing.StickyBucketService)" class="member-name-link">setStickyBucketService(StickyBucketService)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
 <dd>
