deploy: 3486a6123ca03b377252e6240c2057be8af3ce36

--- a/index-all.html
+++ b/index-all.html
@@ -2794,6 +2794,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">How to weight traffic between variations.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/multiusermode/GrowthBookClient.html#shutdown()" class="member-name-link">shutdown()</a> - Method in class growthbook.sdk.java.multiusermode.<a href="growthbook/sdk/java/multiusermode/GrowthBookClient.html" title="class in growthbook.sdk.java.multiusermode">GrowthBookClient</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.html#shutdown()" class="member-name-link">shutdown()</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/Operator.html#SIZE" class="member-name-link">SIZE</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
