deploy: 63c97b08f1f1b887472b7233d0729ff0be4cdcf6

--- a/index-all.html
+++ b/index-all.html
@@ -1484,6 +1484,10 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Method to get <a href="growthbook/sdk/java/model/StickyBucketVariation.html" title="class in growthbook.sdk.java.model"><code>StickyBucketVariation</code></a>: variation and versionIsBlocked.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#getSwrTtlSeconds()" class="member-name-link">getSwrTtlSeconds()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
+<dd>
+<div class="block">The standard cache TTL to use.</div>
+</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.html#getSwrTtlSeconds()" class="member-name-link">getSwrTtlSeconds()</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository</a></dt>
 <dd>
 <div class="block">The standard cache TTL to use (60 seconds)</div>
@@ -2088,7 +2092,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a> - Class in <a href="growthbook/sdk/java/multiusermode/configurations/package-summary.html">growthbook.sdk.java.multiusermode.configurations</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#%3Cinit%3E(java.lang.Boolean,java.lang.Boolean,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.util.List,growthbook.sdk.java.stickyBucketing.StickyBucketService,growthbook.sdk.java.multiusermode.usage.TrackingCallbackWithUser,growthbook.sdk.java.multiusermode.usage.FeatureUsageCallbackWithUser,growthbook.sdk.java.repository.FeatureRefreshStrategy,growthbook.sdk.java.callback.FeatureRefreshCallback,com.google.gson.JsonObject,java.util.Map,java.util.Map,growthbook.sdk.java.sandbox.GbCacheManager,growthbook.sdk.java.sandbox.CacheMode,java.lang.String)" class="member-name-link">Options(Boolean, Boolean, Boolean, Boolean, String, String, String, String, List&lt;String&gt;, StickyBucketService, TrackingCallbackWithUser, FeatureUsageCallbackWithUser, FeatureRefreshStrategy, FeatureRefreshCallback, JsonObject, Map&lt;String, Object&gt;, Map&lt;String, Integer&gt;, GbCacheManager, CacheMode, String)</a> - Constructor for class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#%3Cinit%3E(java.lang.Boolean,java.lang.Boolean,java.lang.Boolean,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.util.List,growthbook.sdk.java.stickyBucketing.StickyBucketService,growthbook.sdk.java.multiusermode.usage.TrackingCallbackWithUser,growthbook.sdk.java.multiusermode.usage.FeatureUsageCallbackWithUser,growthbook.sdk.java.repository.FeatureRefreshStrategy,java.lang.Integer,growthbook.sdk.java.callback.FeatureRefreshCallback,com.google.gson.JsonObject,java.util.Map,java.util.Map,growthbook.sdk.java.sandbox.GbCacheManager,growthbook.sdk.java.sandbox.CacheMode,java.lang.String)" class="member-name-link">Options(Boolean, Boolean, Boolean, Boolean, String, String, String, String, List&lt;String&gt;, StickyBucketService, TrackingCallbackWithUser, FeatureUsageCallbackWithUser, FeatureRefreshStrategy, Integer, FeatureRefreshCallback, JsonObject, Map&lt;String, Object&gt;, Map&lt;String, Integer&gt;, GbCacheManager, CacheMode, String)</a> - Constructor for class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">Options.OptionsBuilder</a> - Class in <a href="growthbook/sdk/java/multiusermode/configurations/package-summary.html">growthbook.sdk.java.multiusermode.configurations</a></dt>
 <dd>&nbsp;</dd>
@@ -2736,6 +2740,10 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">If sticky bucketing was used to assign a variation</div>
 </dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#setSwrTtlSeconds(java.lang.Integer)" class="member-name-link">setSwrTtlSeconds(Integer)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
+<dd>
+<div class="block">The standard cache TTL to use.</div>
+</dd>
 <dt><a href="growthbook/sdk/java/model/GBContext.html#setTrackingCallback(growthbook.sdk.java.callback.TrackingCallback)" class="member-name-link">setTrackingCallback(TrackingCallback)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
 <dd>
 <div class="block">A function that takes <a href="growthbook/sdk/java/model/Experiment.html" title="class in growthbook.sdk.java.model"><code>Experiment</code></a> and <a href="growthbook/sdk/java/model/ExperimentResult.html" title="class in growthbook.sdk.java.model"><code>ExperimentResult</code></a> as arguments.</div>
@@ -2876,6 +2884,8 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/serializers/SuperTypeToken.html" class="type-name-link" title="class in growthbook.sdk.java.serializers">SuperTypeToken</a>&lt;<a href="growthbook/sdk/java/serializers/SuperTypeToken.html" title="type parameter in SuperTypeToken">T</a>&gt; - Class in <a href="growthbook/sdk/java/serializers/package-summary.html">growthbook.sdk.java.serializers</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/serializers/SuperTypeToken.html#%3Cinit%3E()" class="member-name-link">SuperTypeToken()</a> - Constructor for class growthbook.sdk.java.serializers.<a href="growthbook/sdk/java/serializers/SuperTypeToken.html" title="class in growthbook.sdk.java.serializers">SuperTypeToken</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html#swrTtlSeconds(java.lang.Integer)" class="member-name-link">swrTtlSeconds(Integer)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options.OptionsBuilder</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html#swrTtlSeconds(java.lang.Integer)" class="member-name-link">swrTtlSeconds(Integer)</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></dt>
 <dd>&nbsp;</dd>
