deploy: e65a514b858b5ea46ecf59f3e9025a49a11c75cb

--- a/index-all.html
+++ b/index-all.html
@@ -2017,6 +2017,14 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">$notInGroup</div>
 </dd>
+<dt><a href="growthbook/sdk/java/model/Operator.html#NOT_REGEX" class="member-name-link">NOT_REGEX</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
+<dd>
+<div class="block">$notRegex</div>
+</dd>
+<dt><a href="growthbook/sdk/java/model/Operator.html#NOT_REGEX_I" class="member-name-link">NOT_REGEX_I</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
+<dd>
+<div class="block">$notRegexi</div>
+</dd>
 <dt><a href="growthbook/sdk/java/model/DataType.html#NULL" class="member-name-link">NULL</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/DataType.html" title="enum class in growthbook.sdk.java.model">DataType</a></dt>
 <dd>
 <div class="block">when the type is a JSON null</div>
@@ -2198,6 +2206,10 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/model/Operator.html#REGEX" class="member-name-link">REGEX</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
 <dd>
 <div class="block">$regex</div>
+</dd>
+<dt><a href="growthbook/sdk/java/model/Operator.html#REGEX_I" class="member-name-link">REGEX_I</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
+<dd>
+<div class="block">$regexi</div>
 </dd>
 <dt><a href="growthbook/sdk/java/repository/FeatureRefreshStrategy.html#REMOTE_EVAL_STRATEGY" class="member-name-link">REMOTE_EVAL_STRATEGY</a> - Enum constant in enum class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/FeatureRefreshStrategy.html" title="enum class in growthbook.sdk.java.repository">FeatureRefreshStrategy</a></dt>
 <dd>&nbsp;</dd>
