deploy: 16ef4641e835c0f0279dc8c7d906bd63ed6a091f

--- a/index-all.html
+++ b/index-all.html
@@ -185,6 +185,8 @@ loadScripts(document, 'script');</script>
 </dl>
 <h2 class="title" id="I:C">C</h2>
 <dl class="index">
+<dt><a href="growthbook/sdk/java/model/HttpHeaders.html#CACHE_CONTROL" class="member-name-link">CACHE_CONTROL</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/HttpHeaders.html" title="enum class in growthbook.sdk.java.model">HttpHeaders</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html#cacheDirectory(java.lang.String)" class="member-name-link">cacheDirectory(String)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options.OptionsBuilder</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html#cacheManager(growthbook.sdk.java.sandbox.GbCacheManager)" class="member-name-link">cacheManager(GbCacheManager)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options.OptionsBuilder</a></dt>
@@ -211,6 +213,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Given a value, ensures it's clamped between the range provided</div>
 </dd>
+<dt><a href="growthbook/sdk/java/repository/LruETagCache.html#clear()" class="member-name-link">clear()</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/LruETagCache.html" title="class in growthbook.sdk.java.repository">LruETagCache</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/sandbox/FileCachingManagerImpl.html#clearCache()" class="member-name-link">clearCache()</a> - Method in class growthbook.sdk.java.sandbox.<a href="growthbook/sdk/java/sandbox/FileCachingManagerImpl.html" title="class in growthbook.sdk.java.sandbox">FileCachingManagerImpl</a></dt>
 <dd>
 <div class="block">Clears all cache files in the directory</div>
@@ -731,6 +735,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Method for generating a Sticky Bucket Assignment document.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/repository/LruETagCache.html#get(java.lang.String)" class="member-name-link">get(String)</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/LruETagCache.html" title="class in growthbook.sdk.java.repository">LruETagCache</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/HttpMethods.html#GET" class="member-name-link">GET</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/HttpMethods.html" title="enum class in growthbook.sdk.java.model">HttpMethods</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/stickyBucketing/InMemoryStickyBucketServiceImpl.html#getAllAssignments(java.util.Map)" class="member-name-link">getAllAssignments(Map&lt;String, String&gt;)</a> - Method in class growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/InMemoryStickyBucketServiceImpl.html" title="class in growthbook.sdk.java.stickyBucketing">InMemoryStickyBucketServiceImpl</a></dt>
@@ -1739,6 +1745,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="deprecation-block"><span class="deprecated-label">Deprecated.</span></div>
 &nbsp;</dd>
+<dt><a href="growthbook/sdk/java/model/HttpHeaders.html#IF_NONE_MATCH" class="member-name-link">IF_NONE_MATCH</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/HttpHeaders.html" title="enum class in growthbook.sdk.java.model">HttpHeaders</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/IGBFeaturesRepository.html" class="type-name-link" title="interface in growthbook.sdk.java.repository">IGBFeaturesRepository</a> - Interface in <a href="growthbook/sdk/java/repository/package-summary.html">growthbook.sdk.java.repository</a></dt>
 <dd>
 <div class="block">INTERNAL: Interface that is used internally for the <a href="growthbook/sdk/java/repository/GBFeaturesRepository.html" title="class in growthbook.sdk.java.repository"><code>GBFeaturesRepository</code></a></div>
@@ -1906,6 +1914,10 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/repository/LocalGbFeatureRepository.html" class="type-name-link" title="class in growthbook.sdk.java.repository">LocalGbFeatureRepository</a> - Class in <a href="growthbook/sdk/java/repository/package-summary.html">growthbook.sdk.java.repository</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/LocalGbFeatureRepository.html#%3Cinit%3E(java.lang.String)" class="member-name-link">LocalGbFeatureRepository(String)</a> - Constructor for class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/LocalGbFeatureRepository.html" title="class in growthbook.sdk.java.repository">LocalGbFeatureRepository</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/repository/LruETagCache.html" class="type-name-link" title="class in growthbook.sdk.java.repository">LruETagCache</a> - Class in <a href="growthbook/sdk/java/repository/package-summary.html">growthbook.sdk.java.repository</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/repository/LruETagCache.html#%3Cinit%3E(int)" class="member-name-link">LruETagCache(int)</a> - Constructor for class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/LruETagCache.html" title="class in growthbook.sdk.java.repository">LruETagCache</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/Operator.html#LT" class="member-name-link">LT</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
 <dd>
@@ -2155,6 +2167,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Prerequisite Value for the Feature is being processed</div>
 </dd>
+<dt><a href="growthbook/sdk/java/repository/LruETagCache.html#put(java.lang.String,java.lang.String)" class="member-name-link">put(String, String)</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/LruETagCache.html" title="class in growthbook.sdk.java.repository">LruETagCache</a></dt>
+<dd>&nbsp;</dd>
 </dl>
 <h2 class="title" id="I:Q">Q</h2>
 <dl class="index">
@@ -2212,6 +2226,8 @@ loadScripts(document, 'script');</script>
 <div class="block">$regexi</div>
 </dd>
 <dt><a href="growthbook/sdk/java/repository/FeatureRefreshStrategy.html#REMOTE_EVAL_STRATEGY" class="member-name-link">REMOTE_EVAL_STRATEGY</a> - Enum constant in enum class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/FeatureRefreshStrategy.html" title="enum class in growthbook.sdk.java.repository">FeatureRefreshStrategy</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/repository/LruETagCache.html#remove(java.lang.String)" class="member-name-link">remove(String)</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/LruETagCache.html" title="class in growthbook.sdk.java.repository">LruETagCache</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html#requestBodyForRemoteEval(growthbook.sdk.java.model.RequestBodyForRemoteEval)" class="member-name-link">requestBodyForRemoteEval(RequestBodyForRemoteEval)</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></dt>
 <dd>&nbsp;</dd>
@@ -2817,6 +2833,8 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/multiusermode/GrowthBookClient.html#shutdown()" class="member-name-link">shutdown()</a> - Method in class growthbook.sdk.java.multiusermode.<a href="growthbook/sdk/java/multiusermode/GrowthBookClient.html" title="class in growthbook.sdk.java.multiusermode">GrowthBookClient</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.html#shutdown()" class="member-name-link">shutdown()</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/repository/LruETagCache.html#size()" class="member-name-link">size()</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/LruETagCache.html" title="class in growthbook.sdk.java.repository">LruETagCache</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/Operator.html#SIZE" class="member-name-link">SIZE</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
 <dd>
